RESOLVED FIXED 265045
Fix assertion related UI process crash
https://bugs.webkit.org/show_bug.cgi?id=265045
Summary Fix assertion related UI process crash
Per Arne Vollan
Reported 2023-11-17 09:52:15 PST
Fix assertion related UI process crash by checking if selector is present.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-17 09:52:25 PST
Per Arne Vollan
Comment 2 2023-11-17 09:53:58 PST
EWS
Comment 3 2023-11-17 12:29:29 PST
Committed 270910@main (d08dfb4672fe): <https://commits.webkit.org/270910@main> Reviewed commits have been landed. Closing PR #20678 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.