Fix assertion related UI process crash https://bugs.webkit.org/show_bug.cgi?id=265045 rdar://118569476

Reviewed by Chris Dumez.

Fix assertion related UI process crash by checking if selector is present.

* Source/WebKit/UIProcess/Cocoa/ProcessAssertionCocoa.mm:
(WebKit::ProcessAssertion::ProcessAssertion):

Canonical link: https://commits.webkit.org/270910@main